<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.lightcode.exploretheworld.mainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_layout"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/Home_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/home_text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="3sp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/home_text_main"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="28dp"
            android:contentDescription="camping"
            android:src="@mipmap/camping"
            app:layout_constraintLeft_toLeftOf="@+id/home_title"
            app:layout_constraintTop_toBottomOf="@+id/home_title"
            app:srcCompat="@mipmap/camping"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="28dp"
            android:src="@mipmap/waterfalls"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_title"
            app:srcCompat="@mipmap/waterfalls"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="162dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/home_end"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_text_main"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/binoculars"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="@+id/imageView8"
            app:layout_constraintRight_toRightOf="@+id/imageView8"
            app:srcCompat="@mipmap/binoculars"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/backpacker"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/home_text_main"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@mipmap/backpacker"
            tools:ignore="ContentDescription"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_editor_absoluteX="222dp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
